--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 *{
     margin:0;
 }
+.container{
+    display:none;
+}
+@media only screen and (max-width: 1080px){
+    .container{
+        display:block;
+    }
+}
+    
